@@ -163,17 +163,16 @@ class Roster_Handler extends BaseActiveModule
 						return $this -> guest_list();
 				}
 			case 'rosterupdate':
-				$force = true;
 				if ($this -> bot -> guildbot)
 				{
-					$this -> output($source, "Starting roster update.");
-					$this -> bot -> core("roster_core") -> update_guild($force);
+					$this->output($source, "Starting roster update.");
+					$this->bot->core("roster_core")->update_guild(true);
 					return FALSE;
 				}
 				else
 				{
-					$this -> output($source, "Starting roster update.");
-					$this -> bot -> core("roster_core") -> update_raid($force);
+					$this->output($source, "Starting roster update.");
+					$this->bot->core("roster_core")->update_raid(true);
 					return FALSE;
 				}
 				break;
