@@ -21,6 +21,7 @@ Version 0.6.4
 - Added this->bot->core("tools")->my_rand($min=false, $max=false) wrapper to call random number generator.
 - !roll should work properly now.
 - Improved !raffle logic slightly. Will now determine the number of times to do a roll depending on the number of people in the raffle.
+- Added setting Members->QuietUpdate to let the bot do roster updates quietly (default off).
 
 
 -------------
